# TurnBasedRPG

./: CMakeLists.txt  README.md  main.cpp
Core/: AnimationData.h  Boar.cpp  Boar.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.h  Player.cpp  Player.h
Core/Entities/: Boar.cpp  Boar.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  Player.cpp  Player.h  ZombieBase.cpp  ZombieBase.h
